Fixed two bugs;